CI_CD_TOOLS/kubernetes/main/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  namespace: yapster
spec:
  serviceName: mongo    # <--  match the headless service
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          command: ["mongod"]
          args:
            - "--bind_ip_all"
            - "--replSet"
            - "yapster-replica-set"
            - "--dbpath"
            - "/data/db"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-volume
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: mongodb-sc
        resources:
          requests:
            storage: 3G
