CI_CD_TOOLS/kubernetes/main/yapster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yapster-backend
  namespace: yapster
  labels:
    app: yapster-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yapster-backend
  template:
    metadata:
      labels:
        app: yapster-backend
    spec:
      containers:
      - name: yapster-backend
        image: kamalesh25/yap-test:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: yapster-backend-service
  namespace: yapster
spec:
  selector:
    app: yapster-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: ClusterIP
