CI_CD_TOOLS/kubernetes/main/yapster-ingress-simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yapster-ingress
  namespace: yapster
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/enable-websockets: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: yapster.pbktech.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yapster-backend-service
                port:
                  number: 80
